tests/baselines/reference/indexSignatureWithInitializer.errors.txt
tests/cases/compiler/indexSignatureWithInitializer.ts(2,5): error TS1169: Computed property names are not allowed in interfaces.
tests/cases/compiler/indexSignatureWithInitializer.ts(6,5): error TS1166: Computed property names are not allowed in class property declarations.


==== tests/cases/compiler/indexSignatureWithInitializer.ts (2 errors) ====
    interface I {
        [x = '']: string;
        ~~~~~~~~
!!! error TS1169: Computed property names are not allowed in interfaces.
    }
    
    class C {
        [x = 0]: string
        ~~~~~~~
!!! error TS1166: Computed property names are not allowed in class property declarations.
    }